Message: Fix height jump on comments load (#4241)

--- a/src/components/middle/message/CommentButton.scss
+++ b/src/components/middle/message/CommentButton.scss
@@ -5,7 +5,7 @@
   display: flex;
   width: 100%;
   align-items: center;
-  padding: 0.5625rem 0.25rem 0.5625rem 0.625rem;
+  padding: 0.5rem 0.25rem 0.5rem 0.625rem;
   padding-inline-start: 0.625rem;
   padding-inline-end: 0.25rem;
   background: var(--background-color);
@@ -13,7 +13,7 @@
   border-bottom-left-radius: var(--border-bottom-left-radius);
   font-size: 0.9375rem;
   font-weight: 500;
-  line-height: 2rem;
+  line-height: 2.125rem;
   color: var(--accent-color);
   white-space: nowrap;
   cursor: var(--custom-cursor, pointer);
